# Flexify

./: .actrc  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  MIGRATION_GUIDE.md  README.md  analysis_options.yaml  analysis_options_reproducible.yaml  build.yaml  deploy.ps1  deploy.sh  desktop.ini  flutter-watch.sh  generate-schemas.sh  macos.sh  migrate.sh  privacy-policy.txt  pubspec.yaml  screenshots.sh  windows.yml
.claude/: settings.local.json
.github/: FUNDING.yml  workflows.yml
.serena/: project.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
drift_schemas/: drift_schema_v10.json  drift_schema_v11.json  drift_schema_v14.json  drift_schema_v18.json  drift_schema_v19.json  drift_schema_v21.json  drift_schema_v24.json  drift_schema_v25.json  drift_schema_v32.json  drift_schema_v34.json  drift_schema_v35.json  drift_schema_v36.json  drift_schema_v37.json  drift_schema_v38.json  drift_schema_v5.json  drift_schema_v8.json
fastlane/: Deliverfile  Fastfile
integration_test/: performance_test.dart  screenshot_test.dart
ios/: Podfile
lib/: about_page.dart  add_exercise_page.dart  animated_fab.dart  app_line_graph.dart  app_search.dart  app_state.dart  bottom_nav.dart  cardio_data.dart  cardio_line.dart  cardio_page.dart  constants.dart  crash_logger.dart  custom_set_indicator.dart  database.dart  database.g.dart  day_selector.dart  delete_records_button.dart  edit_graph_page.dart  (+53 more)
native/: CMakeLists.txt
native/flexify_native/: channel.h  clock.h  example.cpp  platform.h  timer.h  timer_service.h  timestamp.h
(+621 files in other folders)
